--- a/StockEase/config/settings.json
+++ b/StockEase/config/settings.json
@@ -1,4 +1,11 @@
 {
     "theme": "light",
-    "language": "ar"
+    "language": "fr",
+    "font_size": 12,
+    "paper_type": "A4",
+    "db_username": "",
+    "db_password": "",
+    "backup_path": "",
+    "network_ip": "",
+    "notifications_enabled": true
 }
