the commit will be writen later

--- a/StockEase/config/settings.json
+++ b/StockEase/config/settings.json
@@ -1,6 +1,6 @@
 {
     "theme": "light",
-    "language": "fr",
+    "language": "ar",
     "font_size": 12,
     "paper_type": "A4",
     "db_username": "",
